# mcp-tools

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  activity.py
dashboard/: index.html  mcp_client.py  server.py
docs/genesis/: 2026-02-18_0451_moonlit-bubbling-waterfall.md  2026-02-20_2244_buzzing-munching-ritchie.md  2026-02-20_2247_joyful-sauteeing-spindle.md  2026-02-20_2338_synchronous-bouncing-beacon.md  2026-02-20_2351_twinkly-nibbling-feather.md  2026-02-21_0110_vivid-munching-giraffe.md  2026-02-21_0115_eventual-discovering-book.md  2026-02-21_0143_shimmying-mapping-horizon.md  2026-02-21_0211_nifty-strolling-sunrise.md  2026-02-21_0215_vast-greeting-church.md  2026-02-21_0415_graceful-sauteeing-lobster.md  2026-02-21_0600_swirling-puzzling-sunrise.md  2026-02-21_0601_ca73fcaa.md  2026-02-21_0601_graceful-booping-shannon.md
docs/sigils/: capture_conversation.md  export_conversations.md
photo_embed/: annotations.py  client.py  config.py  entities.py  face.py  indexer.py  metadata.py  models.py  ner.py  notes.py  onnx_text.py  photos_library.py  picker.py  pipeline.py  pyproject.toml  server.py  service.py  thumbnails.py  up.sh
photo_embed/static/: search.html
photo_embed/tests/: test_annotations.py  test_entities.py  test_face.py  test_fusion.py  test_indexer.py  test_integration.py  test_metadata.py  test_notes.py  test_onnx_text.py  test_photos_library.py  test_pipeline.py  test_thumbnails.py
project_embed/: chunker.py  config.py  indexer.py  pyproject.toml  server.py
project_embed/tests/: test_chunker.py  test_indexer.py
rename/: config.py  package-lock.json  package.json  pyproject.toml  rename_cli.py  rename_python.py  rename_swift.py  rename_ts.py  server.py  ts_rename.js
rename/tests/: test_rename_python.py  test_rename_swift.py  test_rename_ts.py
tests/: test_activity.py
thought_index/: chunker.py  config.py  convert_chatgpt.py  embedder.py  entities.py  indexer.py  picker.py  pyproject.toml  server.py  service.py  sources.py
thought_index/tests/: test_chunker.py  test_embedder.py  test_entities.py  test_indexer.py  test_ner.py  test_sources.py
