[project]
name = "photo-embed-mcp"
version = "0.1.0"
description = "MCP server for photo-embed — thin client to sense-maker service"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pyobjc-framework-Cocoa",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
