[project]
name = "project-embed-mcp"
version = "0.1.0"
description = "MCP server for semantic search across project code and documents"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "hnswlib>=0.8.0",
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0",
    "openai>=1.0.0",
    "pytest>=8.0.0",
]

[tool.setuptools]
py-modules = ["config", "chunker", "indexer", "server"]
